<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu_home">

  <Button
      android:id="@+id/btn12"
      android:layout_width="125dp"
      android:layout_height="35dp"
      android:layout_marginTop="8dp"
      android:backgroundTint="#44FF00"
      android:text="@string/Siswa"
      android:textSize="11sp"
      app:layout_constraintEnd_toEndOf="@+id/btn15"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="@+id/btn15"
      app:layout_constraintTop_toBottomOf="@+id/btn15"
      tools:ignore="TouchTargetSizeCheck" />

  <Button
      android:id="@+id/btn15"
      android:layout_width="125dp"
      android:layout_height="35dp"
      android:backgroundTint="#44FF00"
      android:text="@string/Guru"
      app:layout_constraintEnd_toEndOf="@+id/btn10"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/btn10"
      app:layout_constraintTop_toBottomOf="@+id/btn10"
      tools:ignore="TouchTargetSizeCheck" />

  <Button
      android:id="@+id/btn14"
      android:layout_width="125dp"
      android:layout_height="35dp"
      android:backgroundTint="#44FF00"
      android:text="@string/visi_misi_smk_sa"
      android:textSize="11sp"
      app:layout_constraintEnd_toEndOf="@+id/btn12"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/btn12"
      app:layout_constraintTop_toBottomOf="@+id/btn12"
      tools:ignore="TouchTargetSizeCheck" />

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="63dp"
      android:layout_height="59dp"
      android:layout_marginTop="4dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/logo_smksa"
      android:contentDescription="@string/TODO" />

  <TextView
      android:id="@+id/txt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/menu_home"
      android:textColor="#000000"
      android:textSize="14sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/imageView3"
      app:layout_constraintStart_toStartOf="@+id/imageView3"
      app:layout_constraintTop_toBottomOf="@+id/imageView3" />

  <Button
      android:id="@+id/btn10"
      android:layout_width="125dp"
      android:layout_height="35dp"
      android:backgroundTint="#55FF00"
      android:text="@string/Buku"
      android:textSize="11sp"
      app:layout_constraintEnd_toEndOf="@+id/txt"
      app:layout_constraintStart_toStartOf="@+id/txt"
      app:layout_constraintTop_toBottomOf="@+id/txt"
      tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>